GUI SCSS: Undoing the full width snapin collapse due to its buggy appearance

--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -281,8 +281,6 @@ div.snapin {
     }
 
     b.heading {
-      display: inline-block;
-      width: calc(100% - 25px);
       font-size: $theme-font-size-main;
       font-weight: 500;
       letter-spacing: $theme-letter-spacing-table;
